Finish styling the nav bar and added the shopping cart icon

--- a/index.html
+++ b/index.html
@@ -12,14 +12,20 @@
 </head>
 <body>
     <div id="navBar">
-        <div>audiophile</div>
+        <div id="title"><h1>audiophile</h1></div>
         <nav>
             <div><a>HOME</a></div>
             <div><a>HEADPHONES</a></div>
             <div><a>SPEAKERS</a></div>
             <div><a>EARPHONES</a></div>
         </nav>
-        <div><i><img src=""></i></div>
+        <div id="shopcart"><a><img src="shopping-cart-64.png" height="25px" width="25px"></a></div>
+        
+    </div>
+
+    <div id="landing">
+        <div id="text"></div>
+        <div id="image"></div>
     </div>
     
 </body>
