Create and style the landing page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <div id="navBar">
+        <div id="navBar1">
         <div id="title"><h1>audiophile</h1></div>
         <nav>
             <div><a>HOME</a></div>
@@ -20,12 +21,18 @@
             <div><a>EARPHONES</a></div>
         </nav>
         <div id="shopcart"><a><img src="shopping-cart-64.png" height="25px" width="25px"></a></div>
-        
+    </div>
+    <div id="horizontal"><hr></div>
     </div>
 
     <div id="landing">
-        <div id="text"></div>
-        <div id="image"></div>
+        <div id="text">
+            <h1>NEW PRODUCT</h1>
+            <h2>XX99 MARK II HEADPHONES</h2>
+            <p>Experience natural,lifelike audio and exceptional build quality made for the passionate music enthusiast.</p>
+            <button>SEE PRODUCT</button>
+        </div>
+        <div id="image"><img src="Headphones1.jpg" height="500px" width="700px" ></div>
     </div>
     
 </body>
