--- a/index.html
+++ b/index.html
@@ -42,29 +42,29 @@
 
     <div id="productsGallery">
         <div class="product">
-            <div><img src=""></div>
-            <h2></h2>
+            <div><img src="Headphones4.png" height="200px" width="200px"></div>
+            <h4>HEADPHONES</h4>
             <div>
                 <a href="#">Shop</a>
-                <img src="">
+                <svg width="8" height="12" xmlns="http://www.w3.org/2000/svg"><path d="M1.322 1l5 5-5 5" stroke="#D87D4A" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
             </div>
         </div>
 
         <div class="product">
-            <div><img src=""></div>
-            <h2></h2>
+            <div><img src="Speaker4.png" height="200px" width="200px"></div>
+            <h4>SPEAKERS</h4>
             <div>
                 <a href="#">Shop</a>
-                <img src="">
+                <svg width="8" height="12" xmlns="http://www.w3.org/2000/svg"><path d="M1.322 1l5 5-5 5" stroke="#D87D4A" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
             </div>
         </div>
 
         <div class="product">
-            <div><img src=""></div>
-            <h2></h2>
+            <div><img src="Earphones2.png" height="200px" width="200px"></div>
+            <h4>EARPHONES</h4>
             <div>
                 <a href="#">Shop</a>
-                <img src="">
+                <svg width="8" height="12" xmlns="http://www.w3.org/2000/svg"><path d="M1.322 1l5 5-5 5" stroke="#D87D4A" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
             </div>
         </div>
     </div>
