Style the products elements in products gallery container

--- a/index.html
+++ b/index.html
@@ -42,31 +42,35 @@
 
     <div id="productsGallery">
         <div class="product">
-            <div><img src="Headphones4.png" height="200px" width="200px"></div>
+            <div class="image"><img src="pexels-headphones.jpg" height="200px" width="200px"></div>
             <h4>HEADPHONES</h4>
-            <div>
+            <div class="shop">
                 <a href="#">Shop</a>
                 <svg width="8" height="12" xmlns="http://www.w3.org/2000/svg"><path d="M1.322 1l5 5-5 5" stroke="#D87D4A" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
             </div>
         </div>
 
         <div class="product">
-            <div><img src="Speaker4.png" height="200px" width="200px"></div>
+            <div class="image"><img src="Speaker3.png" height="200px" width="200px"></div>
             <h4>SPEAKERS</h4>
-            <div>
+            <div class="shop">
                 <a href="#">Shop</a>
                 <svg width="8" height="12" xmlns="http://www.w3.org/2000/svg"><path d="M1.322 1l5 5-5 5" stroke="#D87D4A" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
             </div>
         </div>
 
         <div class="product">
-            <div><img src="Earphones2.png" height="200px" width="200px"></div>
+            <div class="image"><img src="Earphones2.png" height="200px" width="200px"></div>
             <h4>EARPHONES</h4>
-            <div>
+            <div class="shop">
                 <a href="#">Shop</a>
                 <svg width="8" height="12" xmlns="http://www.w3.org/2000/svg"><path d="M1.322 1l5 5-5 5" stroke="#D87D4A" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
             </div>
         </div>
+    </div>
+
+    <div id="speakerDisplay1">
+        
     </div>
 
 </div>
