Create and style the speaker display2 div element

--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
         </div>
     </div>
 
+    <div id="speakerDisplay2">
+        <div id="label2">ZX7 SPEAKER</div>
+        <button>SEE PRODUCT</button>
+
+    </div>
+
     
 
 </div>
