Create and style earphonesDisplaydiv element

--- a/index.html
+++ b/index.html
@@ -85,7 +85,14 @@
 
     </div>
 
-    
+    <div id="earphonesDisplay">
+        <div id="image2"><img src="Earphones3.png" width="500px" height="250px"></div>
+
+        <div id="earphonesDetails"> 
+            <div id="label3">YX1 EARPHONES</div>
+            <button>SEE PRODUCT</button>
+        </div>
+    </div>
 
 </div>
     
