Create and style audio gear div elements

--- a/index.html
+++ b/index.html
@@ -86,12 +86,26 @@
     </div>
 
     <div id="earphonesDisplay">
-        <div id="image2"><img src="Earphones3.png" width="500px" height="250px"></div>
+        <div id="image2"><img src="Earphones3.png" width="535px" height="270px"></div>
 
         <div id="earphonesDetails"> 
             <div id="label3">YX1 EARPHONES</div>
             <button>SEE PRODUCT</button>
         </div>
+    </div>
+
+    <div id="audioGear">
+        <div id="audioGearDetails">
+            <h3>BRINGING YOU THE <span>BEST</span> AUDIO GEAR</h3>
+            <p>Located at the heart of New York City, Audiophile is the premier store for
+                high end headphones, earphones, speakers, and audio accessories. We have a
+                large showroom and luxury demonstration rooms available for you to browse
+                and experience a wide range of our products. Stop by our store to meet some
+                of the fantastic people who make Audiophile the best place to buy your portable
+                audio equipment.</p>
+        </div>
+
+        <div id="audioGearImage"><img src="SpeakerUser.png" width="535px" height="600px"></div>
     </div>
 
 </div>
