create and style foot1 div of the footer container

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
     <div id="navBar">
         <div id="navBar1">
-        <div id="title"><h1>audiophile</h1></div>
-        <nav>
-            <div><a href="#">HOME</a></div>
+            <div id="title"><h1>audiophile</h1></div>
+            <nav>
+                <div><a href="#">HOME</a></div>
             <div><a href="#">HEADPHONES</a></div>
             <div><a href="#">SPEAKERS</a></div>
             <div><a href="#">EARPHONES</a></div>
@@ -108,6 +108,25 @@
         <div id="audioGearImage"><img src="SpeakerUser.png" width="535px" height="600px"></div>
     </div>
 
+</div>
+
+<div id="footer">
+    <div id="foot1">
+            <div id="navBar2">
+                <div id="title"><h1>audiophile</h1></div>
+
+            <div id="footNav">
+                <div><a href="#">HOME</a></div>
+                <div><a href="#">HEADPHONES</a></div>
+                <div><a href="#">SPEAKERS</a></div>
+                <div><a href="#">EARPHONES</a></div>
+            </div>
+
+        </div>
+        <div id="horizontal"><hr></div>
+
+        
+    </div>
 </div>
     
 </body>
