--- a/headphone.html
+++ b/headphone.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=\, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sen:wght@800&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="Css/style.css" type="text/css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="Js/script.js"></script>
+    <title>Audiophile</title>
 </head>
 <body>
+
+    <div id="navBar">
+        <div id="navBar1">
+            <div id="title"><h1>audiophile</h1></div>
+            <nav>
+                <div><a href="#">HOME</a></div>
+            <div><a href="#">HEADPHONES</a></div>
+            <div><a href="#">SPEAKERS</a></div>
+            <div><a href="#">EARPHONES</a></div>
+        </nav>
+        <div id="shopcart"><a href="#"><img src="shopping-cart-64.png" height="25px" width="25px"></a></div>
+    </div>
+    <div id="horizontal"><hr></div>
+    </div>
     
 </body>
 </html>
