Creat the new product container and added it details for the headphones page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div id="title"><h1>audiophile</h1></div>
             <nav>
                 <div><a href="#">HOME</a></div>
-            <div><a href="#">HEADPHONES</a></div>
+            <div><a href="headphone.html">HEADPHONES</a></div>
             <div><a href="#">SPEAKERS</a></div>
             <div><a href="#">EARPHONES</a></div>
         </nav>
