--- a/headphone.html
+++ b/headphone.html
@@ -28,6 +28,25 @@
     </div>
     <div id="horizontal"><hr></div>
     </div>
+
+    <div><a href="index.html">GO BACk</a></div>
+
+    <div id="newProduct">
+        <div id="image3"><img src="" height="" width=""></div>
+
+        <div id="description">
+            <h4>NEW PRODUCT</h4>
+            <h1>XX99 MARK II HEADPHONES</h1>
+            <p>The new XX99 MARK II headphones is the pinnacle od pristine audio.
+             It redefines you premium headphones experience by reproducing the 
+             balanced depth and precision of studio-quality sound.</p>
+             <h4>$2,999</h4>
+
+             
+        </div>
+
+
+    </div>
     
 </body>
 </html>
