--- a/headphone.html
+++ b/headphone.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sen:wght@800&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="Css/style.css" type="text/css">
+    <link rel="stylesheet" href="Css/headphone.css" type="text/css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="Js/script.js"></script>
     <title>Audiophile</title>
@@ -29,10 +29,10 @@
     <div id="horizontal"><hr></div>
     </div>
 
-    <div><a href="index.html">GO BACk</a></div>
+    <div><a href="index.html">Go Back</a></div>
 
     <div id="newProduct">
-        <div id="image3"><img src="" height="" width=""></div>
+        <div id="image3"><img src="Headphones3.png" height="500px" width="500px"></div>
 
         <div id="description">
             <h4>NEW PRODUCT</h4>
@@ -42,7 +42,7 @@
              balanced depth and precision of studio-quality sound.</p>
              <h4>$2,999</h4>
 
-             
+
         </div>
 
 
