Finish styling of the New product elements

--- a/headphone.html
+++ b/headphone.html
@@ -29,7 +29,7 @@
     <div id="horizontal"><hr></div>
     </div>
 
-    <div><a href="index.html">Go Back</a></div>
+    <div id="backBtn"><a href="index.html">Go Back</a></div>
 
     <div id="newProduct">
         <div id="image3"><img src="Headphones3.png" height="500px" width="500px"></div>
@@ -37,10 +37,10 @@
         <div id="description">
             <h4>NEW PRODUCT</h4>
             <h1>XX99 MARK II HEADPHONES</h1>
-            <p>The new XX99 MARK II headphones is the pinnacle od pristine audio.
+            <p>The new XX99 MARK II headphones is the pinnacle of pristine audio.
              It redefines you premium headphones experience by reproducing the 
              balanced depth and precision of studio-quality sound.</p>
-             <h4>$2,999</h4>
+             <h3>$2,999</h3>
 
 
         </div>
