Create a div to hold the cart buttons

--- a/headphone.html
+++ b/headphone.html
@@ -42,6 +42,15 @@
              balanced depth and precision of studio-quality sound.</p>
              <h3>$2,999</h3>
 
+             <div id="cartBtn">
+                 <div id="quantityBtn">
+                     <button onclick="decrement()">-</button>
+                     <h2 id="num"></h2>
+                     <button onclick="increment()">+</button>
+                 </div>
+
+             </div>
+
 
         </div>
 
