Add stlying to the buttons in cartBtn div

--- a/headphone.html
+++ b/headphone.html
@@ -48,6 +48,7 @@
                      <h2 id="num"></h2>
                      <button onclick="increment()">+</button>
                  </div>
+                 <button id="addCart">ADD TO CART</button>
 
              </div>
 
