Finish implementing the javascript code for the cart buttons

--- a/headphone.html
+++ b/headphone.html
@@ -44,9 +44,9 @@
 
              <div id="cartBtn">
                  <div id="quantityBtn">
-                     <button onclick="decrement()">-</button>
+                     <button id="decrease" onclick="decrement()">-</button>
                      <h2 id="num"></h2>
-                     <button onclick="increment()">+</button>
+                     <button id="increase" onclick="increment()">+</button>
                  </div>
                  <button id="addCart">ADD TO CART</button>
 
