Create feature div container and add details of the headhopes in headphone.html

--- a/headphone.html
+++ b/headphone.html
@@ -52,6 +52,29 @@
 
              </div>
 
+             <div id="features">
+                 <div id="paragraphs">
+                     <h1>FEATURES</h1>
+                     <p>Featuring a genuine leather head strap and earcups,
+                         these headphones deliver superior comfort for those who like to enjoy endless listening.
+                        It includes intuitive contorls designed for any situation. Whether you're taking a
+                         business call or just for your own personal space. The auto on/off and pause features ensure that you'll never miss a beat.
+                        </p>
+                     <p>The advanced active noise cancellation with built-in equilizer allows you to experience your
+                         audio world on your terms.It lets you enjoy your audio in peace, but quickly interacts with your surrounding
+                         when you need to.Combined with Bluetooth 5.0 compliant connectivity and 17 hour battery life,the XX99 Mark II headphones give you
+                         superior sound,cuting edge technology and a modern design aesthetic.
+                     </p>
+                 </div>
+                 <div id="accessories">
+                     <h1>IN THE BOX</h1>
+                     <div><span>1x</span> <p>Headphone Unit</p> </div>
+                     <div><span>2x</span> <p>Replacement Earcups</p> </div>
+                     <div><span>1x</span> <p>User Manual</p> </div>
+                     <div><span>1x</span> <p>3.5mm 5m Audio cable</p> </div>
+                     <div><span>1x</span> <p>Travel Bag</p> </div>
+                 </div>
+             </div>
 
         </div>
 
