--- a/headphone.html
+++ b/headphone.html
@@ -80,6 +80,15 @@
             <div class="items"><span>1x</span> <p>Travel Bag</p> </div>
         </div>
     </div>
+
+    <div id="galleryDisplay">
+        <div id="userPic">
+            <div><img src="SpeakerUser.png" height="300px" width="300px"></div>
+            <div><img src="Headphones6.png" height="300px" width="300px"></div>
+        </div>
+        <div> <img src="Headphones5.png" height="600px" width="350px"> </div>
+    </div>
+
     
 </body>
 </html>
