Finish styling the gallery display images

--- a/headphone.html
+++ b/headphone.html
@@ -83,10 +83,10 @@
 
     <div id="galleryDisplay">
         <div id="userPic">
-            <div><img src="SpeakerUser.png" height="300px" width="300px"></div>
-            <div><img src="Headphones6.png" height="300px" width="300px"></div>
+            <div><img src="SpeakerUser.png" height="250px" width="450px"></div>
+            <div><img src="Headphones6.png" height="250px" width="450px"></div>
         </div>
-        <div> <img src="Headphones5.png" height="600px" width="350px"> </div>
+        <div id="imgHp"> <img src="Headphones5.png" height="520px" width="550px"> </div>
     </div>
 
     
