Create and style the Products2 display container and its div elements

--- a/headphone.html
+++ b/headphone.html
@@ -89,6 +89,33 @@
         <div id="imgHp"> <img src="Headphones5.png" height="520px" width="550px"> </div>
     </div>
 
+    <div id="ymal"><h2>YOU MAY ALSO LIKE</h2></div>
+
+    <div id="products2">
+        <div class="productItem">
+            <div> <img src="Headphones1.png" height="250px" width="300px" alt=""> </div>
+            <div class="name">
+            <h3>XX99 MARK I</h3>
+            <button>SEE PRODUCT</button>
+        </div>
+        </div>
+
+        <div class="productItem">
+            <div> <img src="Headphoneswhite.png" height="250px" width="300px" alt=""> </div>
+            <div class="name">
+            <h3>XX59</h3>
+            <button>SEE PRODUCT</button>
+        </div>
+        </div>
+
+        <div class="productItem">
+            <div> <img src="Speaker2.png" height="250px" width="300px" alt=""> </div>
+            <div class="name">
+            <h3>ZX9 SPEAKER</h3>
+            <button>SEE PRODUCT</button>
+        </div>
+        </div>
+    </div>
     
 </body>
 </html>
