Create and style the products3 display container and its div elements

--- a/headphone.html
+++ b/headphone.html
@@ -116,6 +116,35 @@
         </div>
         </div>
     </div>
+
+    <div id="products3">
+        <div class="productItem2">
+            <div> <img src="Headphones4-removebg-preview.png" height="200px" width="200px" alt=""> </div>
+            <h4>HEADPHONES</h4>
+            <div class="shop2">
+                <a href="#">Shop</a>
+                <svg width="8" height="12" xmlns="http://www.w3.org/2000/svg"><path d="M1.322 1l5 5-5 5" stroke="#D87D4A" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
+            </div>
+        </div>
+
+        <div class="productItem2">
+            <div> <img src="Speaker4-removebg-preview.png" height="200px" width="200px" alt=""> </div>
+            <h4>SPEAKERS</h4>
+            <div class="shop2">
+                <a href="#">Shop</a>
+                <svg width="8" height="12" xmlns="http://www.w3.org/2000/svg"><path d="M1.322 1l5 5-5 5" stroke="#D87D4A" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
+            </div>
+        </div>
+
+        <div class="productItem2">
+            <div> <img src="Earphones2-removebg-preview.png" height="200px" width="200px" alt=""> </div>
+            <h4>EARPHONES</h4>
+            <div class="shop2">
+                <a href="#">Shop</a>
+                <svg width="8" height="12" xmlns="http://www.w3.org/2000/svg"><path d="M1.322 1l5 5-5 5" stroke="#D87D4A" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
