create and style the footer of the headphones page

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
             <div id="footNav">
                 <div><a href="#">HOME</a></div>
-                <div><a href="#">HEADPHONES</a></div>
+                <div><a href="headphone.html">HEADPHONES</a></div>
                 <div><a href="#">SPEAKERS</a></div>
                 <div><a href="#">EARPHONES</a></div>
             </div>
