Add hover effects on all links and buttons of the website

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <div id="container">
 
     <div id="productsGallery">
-        <div class="product">
-            <div class="image"><img src="Headphones4.png" height="200px" width="200px"></div>
+        <div class="product" >
+            <div class="image" data-tilt><img src="Headphones4.png" height="200px" width="200px"></div>
             <h4>HEADPHONES</h4>
             <div class="shop">
                 <a href="#">Shop</a>
@@ -51,7 +51,7 @@
         </div>
 
         <div class="product">
-            <div class="image"><img src="Speaker4.png" height="200px" width="200px"></div>
+            <div class="image" data-tilt><img src="Speaker4.png" height="200px" width="200px"></div>
             <h4>SPEAKERS</h4>
             <div class="shop">
                 <a href="#">Shop</a>
@@ -60,7 +60,7 @@
         </div>
 
         <div class="product">
-            <div class="image"><img src="Earphones2.png" height="200px" width="200px"></div>
+            <div class="image" data-tilt><img src="Earphones2.png" height="200px" width="200px"></div>
             <h4>EARPHONES</h4>
             <div class="shop">
                 <a href="#">Shop</a>
@@ -149,5 +149,6 @@
     
 </div>
     
+<script src="Js/vanilla-tilt.js"></script>
 </body>
 </html>
