Make website responsive for screen size of width 768px

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
     </div>
 
     <div id="speakerDisplay1">
-        <div id="image1"> <img src="Speaker2-removebg-preview.png" height="800px" width="800px"> </div>
-        <svg width="944" height="944" xmlns="http://www.w3.org/2000/svg"><g stroke="#FFF" fill="none" fill-rule="evenodd" opacity=".202"><circle cx="272" cy="272" r="235.5"/><circle cx="272" cy="272" r="270.5"/><circle cx="272" cy="272" r="471.5"/></g></svg>
+        <div id="image1"> <img src="Speaker2-removebg-preview.png"> </div>
+        <svg width="744" height="744" xmlns="http://www.w3.org/2000/svg"><g stroke="#FFF" fill="none" fill-rule="evenodd" opacity=".202"><circle cx="272" cy="272" r="235.5"/><circle cx="272" cy="272" r="270.5"/><circle cx="260" cy="260" r="431.5"/></g></svg>
         <div id="speakerDetails">
-            <div id="label">ZX9 SPEAKER</div>
+            <h5>ZX9 SPEAKER</h5> 
             <p>Upgrade to premium speaker that are phenomenally built to deliver truly remarkable sound.</p>
             <button>SEE PRODUCT</button>
         </div>
@@ -86,7 +86,7 @@
     </div>
 
     <div id="earphonesDisplay">
-        <div id="image2"><img src="Earphones3.png" width="535px" height="270px"></div>
+        <div id="image2"><img src="Earphones3.png" ></div>
 
         <div id="earphonesDetails"> 
             <div id="label3">YX1 EARPHONES</div>
@@ -105,7 +105,7 @@
                 audio equipment.</p>
         </div>
 
-        <div id="audioGearImage"><img src="SpeakerUser.png" width="535px" height="600px"></div>
+        <div id="audioGearImage"><img src="SpeakerUser.png" ></div>
     </div>
 
 </div>
