--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="landing">
         <div id="text">
             <h1>NEW PRODUCT</h1>
-            <h2>XX99 MARK II HEADPHONES</h2>
+            <h2>XX99 MARK II HEADPHONE</h2>
             <p>Experience natural,lifelike audio and exceptional build quality made for the passionate music enthusiast.</p>
             <button>SEE PRODUCT</button>
         </div>
@@ -71,7 +71,7 @@
 
     <div id="speakerDisplay1">
         <div id="image1"> <img src="Speaker2-removebg-preview.png"> </div>
-        <svg width="744" height="744" xmlns="http://www.w3.org/2000/svg"><g stroke="#FFF" fill="none" fill-rule="evenodd" opacity=".202"><circle cx="272" cy="272" r="235.5"/><circle cx="272" cy="272" r="270.5"/><circle cx="260" cy="260" r="431.5"/></g></svg>
+        <svg xmlns="http://www.w3.org/2000/svg"><g stroke="#FFF" fill="none" fill-rule="evenodd" opacity=".202"><circle cx="222" cy="222" r="235.5"/><circle cx="222" cy="222" r="270.5"/><circle cx="250" cy="250" r="431.5"/></g></svg>
         <div id="speakerDetails">
             <h5>ZX9 SPEAKER</h5> 
             <p>Upgrade to premium speaker that are phenomenally built to deliver truly remarkable sound.</p>
