--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sen:wght@800&display=swap" rel="stylesheet">
@@ -18,13 +19,24 @@
         <div id="navBar1">
             <div id="title"><h1>audiophile</h1></div>
             <nav>
-                <div><a href="#">HOME</a></div>
+            <div><a href="#">HOME</a></div>
             <div><a href="headphone.html">HEADPHONES</a></div>
             <div><a href="#">SPEAKERS</a></div>
             <div><a href="#">EARPHONES</a></div>
         </nav>
         <div id="shopcart"><a href="#"><img src="shopping-cart-64.png" height="25px" width="25px"></a></div>
     </div>
+
+    <div id="dropDown">
+        <div id="navIcon"><a href="#"><i class="fa fa-bars" ></i></a></div>
+        <div id="dropMenu">
+            <div><a href="#">HOME</a></div>
+            <div><a href="headphone.html">HEADPHONES</a></div>
+            <div><a href="#">SPEAKERS</a></div>
+            <div><a href="#">EARPHONES</a></div>
+        </div>
+    </div>
+
     <div id="horizontal"><hr></div>
     </div>
 
