Improve the web responsiveness of the headphones page for max screen 768px

--- a/headphone.html
+++ b/headphone.html
@@ -32,7 +32,7 @@
     <div id="backBtn"><a href="index.html">Go Back</a></div>
 
     <div id="newProduct">
-        <div id="image3"><img src="Headphones3.png" height="500px" width="500px"></div>
+        <div id="image3"><img src="Headphones3.png" ></div>
 
         <div id="description">
             <h4>NEW PRODUCT</h4>
@@ -83,17 +83,17 @@
 
     <div id="galleryDisplay">
         <div id="userPic">
-            <div><img src="SpeakerUser.png" height="250px" width="450px"></div>
-            <div><img src="Headphones6.png" height="250px" width="450px"></div>
+            <div><img src="SpeakerUser.png" ></div>
+            <div><img src="Headphones6.png" ></div>
         </div>
-        <div id="imgHp"> <img src="Headphones5.png" height="520px" width="550px"> </div>
+        <div id="imgHp"> <img src="Headphones5.png" > </div>
     </div>
 
     <div id="ymal"><h2>YOU MAY ALSO LIKE</h2></div>
 
     <div id="products2">
         <div class="productItem">
-            <div> <img src="Headphones1.png" height="250px" width="300px" alt=""> </div>
+            <div> <img src="Headphones1.png" alt=""> </div>
             <div class="name">
             <h3>XX99 MARK I</h3>
             <button>SEE PRODUCT</button>
@@ -101,7 +101,7 @@
         </div>
 
         <div class="productItem">
-            <div> <img src="Headphoneswhite.png" height="250px" width="300px" alt=""> </div>
+            <div> <img src="Headphoneswhite.png"  alt=""> </div>
             <div class="name">
             <h3>XX59</h3>
             <button>SEE PRODUCT</button>
@@ -109,7 +109,7 @@
         </div>
 
         <div class="productItem">
-            <div> <img src="Speaker2.png" height="250px" width="300px" alt=""> </div>
+            <div> <img src="Speaker2.png" alt=""> </div>
             <div class="name">
             <h3>ZX9 SPEAKER</h3>
             <button>SEE PRODUCT</button>
@@ -119,7 +119,7 @@
 
     <div id="products3">
         <div class="productItem2">
-            <div> <img src="Headphones4-removebg-preview.png" height="200px" width="200px" alt=""> </div>
+            <div> <img src="Headphones4-removebg-preview.png"  alt=""> </div>
             <h4>HEADPHONES</h4>
             <div class="shop2">
                 <a href="#">Shop</a>
@@ -128,7 +128,7 @@
         </div>
 
         <div class="productItem2">
-            <div> <img src="Speaker4-removebg-preview.png" height="200px" width="200px" alt=""> </div>
+            <div> <img src="Speaker4-removebg-preview.png"  alt=""> </div>
             <h4>SPEAKERS</h4>
             <div class="shop2">
                 <a href="#">Shop</a>
@@ -137,7 +137,7 @@
         </div>
 
         <div class="productItem2">
-            <div> <img src="Earphones2-removebg-preview.png" height="200px" width="200px" alt=""> </div>
+            <div> <img src="Earphones2-removebg-preview.png" alt=""> </div>
             <h4>EARPHONES</h4>
             <div class="shop2">
                 <a href="#">Shop</a>
@@ -157,7 +157,7 @@
                 audio equipment.</p>
         </div>
 
-        <div id="audioGearImage"><img src="SpeakerUser.png" width="535px" height="600px"></div>
+        <div id="audioGearImage"><img src="SpeakerUser.png"></div>
     </div>
 
     <div id="footer">
