Creat the checkout page and finish add input fields for checkout details

--- a/headphone.html
+++ b/headphone.html
@@ -25,7 +25,7 @@
             <div><a href="#">SPEAKERS</a></div>
             <div><a href="#">EARPHONES</a></div>
         </nav>
-        <div id="shopcart"><a href="#"><img src="shopping-cart-64.png" height="25px" width="25px"></a></div>
+        <div id="shopcart"><a href="checkout.html"><img src="shopping-cart-64.png" height="25px" width="25px"></a></div>
     </div>
 
     <div id="dropDown">
