Add a summary calculation container and finished styling the checkout page

--- a/checkout.html
+++ b/checkout.html
@@ -133,7 +133,58 @@
 
         <div id="container2">
             <h1>SUMMARY</h1>
-            
+            <div class="order">
+                <img src="Headphones3.png" >
+                <div class="price">
+                    <h3>XX99</h3>
+                    <p>$2,999</p>
+                </div>
+                <div class="quantity">x1</div>
+            </div>
+
+            <div class="order">
+                <img src="Headphoneswhite.png">
+                <div class="price">
+                    <h3>XX59</h3>
+                    <p>$899</p>
+                </div>
+                <div class="quantity">x2</div>
+            </div>
+
+            <div class="order">
+                <img src="Earphones1.png">
+                <div class="price">
+                    <h3>YX1</h3>
+                    <p>$599</p>
+                </div>
+                <div class="quantity">x1</div>
+            </div>
+
+            <div id="calculations">
+
+            <div id="total">
+                <p>TOTAL</p> 
+                <h3>$5,396</h3>
+            </div>
+
+            <div id="shipfee">
+                <p>SHIPPING</p>
+                <h3>$50</h3>
+            </div>
+
+            <div id="vat">
+                <p>VAT(INCLUDED)</p>
+                <h3>$1,079</h3>
+            </div>
+
+            <div id="gtotal">
+                <p>GRAND TOTAL</p>
+                <h3>$5,446</h3>
+            </div>
+
+            <div id="pay"><a href="">CONTINUE & PAY</a></div>
+
+        </div>
         </div>
 
     </div>
