Add media queries to the checkout page

--- a/headphone.html
+++ b/headphone.html
@@ -18,18 +18,19 @@
 
     <div id="navBar">
         <div id="navBar1">
+            <div id="navIcon"><a href="#"><i class="fa fa-bars" ></i></a></div>
             <div id="title"><h1>audiophile</h1></div>
             <nav>
             <div><a href="index.html">HOME</a></div>
-            <div><a href="#">HEADPHONES</a></div>
+            <div><a href="headphone.html">HEADPHONES</a></div>
             <div><a href="#">SPEAKERS</a></div>
             <div><a href="#">EARPHONES</a></div>
         </nav>
-        <div id="shopcart"><a href="checkout.html"><img src="shopping-cart-64.png" height="25px" width="25px"></a></div>
+        <div id="shopCart"><a href="checkout.html"><img src="shopping-cart-64.png" height="25px" width="25px"></a></div>
     </div>
 
     <div id="dropDown">
-        <div id="navIcon"><a href="#"><i class="fa fa-bars" ></i></a></div>
+
         <div id="dropMenu">
             <div><a href="index.html">HOME</a></div>
             <div><a href="headphone.html">HEADPHONES</a></div>
@@ -60,7 +61,7 @@
                      <h2 id="num"></h2>
                      <button id="increase" onclick="increment()">+</button>
                  </div>
-                 <button id="addCart">ADD TO CART</button>
+                 <button id="addCart"><a href="checkout.html">ADD TO CART</a></button>
 
              </div>   
 
