--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <nav>
             <div><a href="#">HOME</a></div>
             <div><a href="headphone.html">HEADPHONES</a></div>
-            <div><a href="#">SPEAKERS</a></div>
-            <div><a href="#">EARPHONES</a></div>
+            <div><a href="headphone.html">SPEAKERS</a></div>
+            <div><a href="headphone.html">EARPHONES</a></div>
         </nav>
-        <div id="shopcart"><a href="checkout.html"><img src="shopping-cart-64.png" height="25px" width="25px"></a></div>
+        <div id="shopCart"><a href="checkout.html"><img src="shopping-cart-64.png" height="25px" width="25px"></a></div>
     </div>
 
     <div id="dropDown">
@@ -33,8 +33,8 @@
         <div id="dropMenu">
             <div><a href="#">HOME</a></div>
             <div><a href="headphone.html">HEADPHONES</a></div>
-            <div><a href="#">SPEAKERS</a></div>
-            <div><a href="#">EARPHONES</a></div>
+            <div><a href="headphone.html">SPEAKERS</a></div>
+            <div><a href="headphone.html">EARPHONES</a></div>
         </div>
     </div>
 
@@ -58,7 +58,7 @@
             <div class="image" data-tilt><img src="Headphones4.png" height="200px" width="200px"></div>
             <h4>HEADPHONES</h4>
             <div class="shop">
-                <a href="#">Shop</a>
+                <a href="headphone.html">Shop</a>
                 <svg width="8" height="12" xmlns="http://www.w3.org/2000/svg"><path d="M1.322 1l5 5-5 5" stroke="#D87D4A" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
             </div>
         </div>
