Add styles for small phone screen media query

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         <div id="image"><img src="Headphones1.jpg" height="500px" width="700px" ></div>
     </div>
 
-    <div id="container">
+    <div  class="container" id="container">
 
-    <div id="productsGallery">
-        <div class="product" >
+    <div class="row" id="productsGallery">
+        <div class="col-sm-4 product " >
             <div class="image" data-tilt><img src="Headphones4.png" height="200px" width="200px"></div>
             <h4>HEADPHONES</h4>
             <div class="shop">
@@ -63,7 +63,7 @@
             </div>
         </div>
 
-        <div class="product">
+        <div class="col-sm-4 product">
             <div class="image" data-tilt><img src="Speaker4.png" height="200px" width="200px"></div>
             <h4>SPEAKERS</h4>
             <div class="shop">
@@ -72,7 +72,7 @@
             </div>
         </div>
 
-        <div class="product">
+        <div class="col-sm-4 product">
             <div class="image" data-tilt><img src="Earphones2.png" height="200px" width="200px"></div>
             <h4>EARPHONES</h4>
             <div class="shop">
